TEST_PROGRAMS/VALID/05/if_else_rob_brace.go
/* If statements */

package main

func main() {
	x := true

	/* Robillard braces on else, no statement */

	if x {
		//Do nothing
	} else 
	{
		println(x)
	}

}
