TEST_PROGRAMS/INVALID/05/leading_zeroes_in_int.go
/* Leading 0's in int. */

package main

var x int = 09 // Error: Leading zeroes in int

func main() {
	// Do nothing
}
